assets/css/pages/showcase-panels.css
/*********************************/
/*             THEME             */
/*********************************/

#dynamic-menu-button i ,
footer i {
    color: hsla(188, 87%, 30%, 1);
}

#close-menu-button,
.programs-list a,
.program-details-container,
.blue-bkgd,
.blue-bkgd a,
footer p {
    color: hsla(0, 0%, 100%, 1);
}

.blue-bkgd,
.program-summary span,
footer {
    background-color: hsla(188, 87%, 30%, 1);
}

.program-description {
    background-color: hsla(0, 0%, 0%, .55);
}

footer li {
    background-color: hsla(0, 0%, 100%, 1);
}

/********************************/
/*           GLOBALS            */
/********************************/

.showcase-panel {
    display: flex;
    flex-direction: column;
    margin: 27vh 0 70px 0;
}

.showcase-panel span i {
    font-size: 7vmin;
}

.speech-container p {
    margin: 10px 5%;
}

.speech-container img {
    height: 150px;
    margin: 20px 0;
    object-fit: cover;
    width: 100%;
}

.speech-container .btn {
    align-self: center;
    margin-bottom: 17px;
    margin-top: 10px;
}

.showcase-question {
    align-self: flex-start;
    text-decoration: underline;
}

.programs-list li,
.program-details-container {
    background-position: 50%;
    background-size: cover;
}

.monthly-program {
    background-image: url('./../../../public/img/program_backgrounds/monthly-sub.jpg');
}

.quarterly-program {
    background-image: url('./../../../public/img/program_backgrounds/quarterly-sub.jpg');
}

.halfyearly-program {
    background-image: url('./../../../public/img/program_backgrounds/halfyearly-sub.jpg');
}

.showcase-panel i {
    margin-right: 5px;
}

/*******************************/
/*     PROGRAMS LIST LAYER     */
/*******************************/

.programs-list > li {
    min-height: calc((100vh - 11vh - 16vh - 70px) / 3);
    position: relative;
}

.program-summary {
    display: flex;
    flex-direction: column;
    height: 100%;
    position: absolute;
    top: 0;
    width: 100%;
}

h2 {
    font-size: 8vmin;
}

.program-summary h2 {
    margin: 20px 20px;
}

.program-summary p {
    margin: 5px 20px;
}

.program-summary span {
    bottom: 30px;
    position: absolute;
    right: 30px;
}

.programs-list span i {
    margin: 0;
}

/*********************************/
/*     PROGRAM DETAILS LAYER     */
/*********************************/

.program-details {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: calc(73vh - 70px);
    padding: 20px;
}

.program-headers h2 {
    margin: 17px 0;
}

.program-headers p {
    margin: 5px 0;
}

.program-description {
    border-radius: 15px;
    margin: 20px 20px 25px 20px;
    padding: 15px 20px;
}

.program-details a:last-child {
    align-self: flex-end;
}

/************************/
/*     SHOWCASE 404     */
/************************/

.centered-content {
    padding: 20px 25px 0;
    text-align: center;
}

/************************/
/*     DYNAMIC MENU     */
/************************/

.blurry-layer {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 98;
}

.dynamic-menu-layer {
    width: 0px;
    height: 100vh;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 98;
    display: flex;
    flex-direction: column;
}



.close-menu-layer {
    width: 100%;
    height: 11vh;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    position: absolute;
    top: 0;
}

.close-menu-layer button {
    margin-right: 20px;
    padding: 20px;
}

#close-menu-button {
    font-size: 12vmin;
    color: white;
}

.dynamic-menu {
    width: 100%;
    height: 89vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.dynamic-menu * {
    width: 100%;
}

.dynamic-menu ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.dynamic-menu a {
    display: block;
    font-size: 1.4em;
    padding: 2vh 0;
}

.menu-splitter {
    height: 4px;
    width: 50%;
    background-color: hsl(188, 92%, 54%);
    align-self: center;
    border-radius: 2px;
}

